--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.1.5",
     "framer-motion": "^4.0.3",
     "next": ">=11.1.0",
+    "nextjs-google-analytics": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
